--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "apollo-server-express": "^3.9.0",
     "cross-env": "^7.0.3",
     "graphql": "^16.5.0",
+    "joi": "^17.6.0",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
