--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^9.0.1",
     "apollo-server-express": "^3.9.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "cross-env": "^7.0.3",
     "graphql": "^16.5.0",
     "joi": "^17.6.0",
